--- a/sandbox_jitter_recovery_trading_binance.ipynb
+++ b/sandbox_jitter_recovery_trading_binance.ipynb
@@ -714,109 +714,7 @@
     }
    ],
    "source": [
-    "dfst_feature = algo.jitter_recovery.research.get_dfst_feature(df, jitter_recovery_trading_param)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "f2c517e3-6acf-48c9-9bfa-70abd2676470",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-03T21:35:12.126503Z",
-     "iopub.status.busy": "2024-02-03T21:35:12.126336Z",
-     "iopub.status.idle": "2024-02-03T21:35:13.478157Z",
-     "shell.execute_reply": "2024-02-03T21:35:13.477592Z",
-     "shell.execute_reply.started": "2024-02-03T21:35:12.126491Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "symbol_with_jumps = [s for s in list(set(list(dfst_feature[dfst_feature.ch_max >= 0.18].index.get_level_values(0)))) if 'USDT' in s]\n",
-    "len(symbol_with_jumps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4345d36-fe66-4952-af69-81362cbda2b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "d98968b0-af32-4faa-b5cf-a491da123f74",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-03T21:35:13.478934Z",
-     "iopub.status.busy": "2024-02-03T21:35:13.478781Z",
-     "iopub.status.idle": "2024-02-03T21:35:13.485683Z",
-     "shell.execute_reply": "2024-02-03T21:35:13.484994Z",
-     "shell.execute_reply.started": "2024-02-03T21:35:13.478922Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'algo.jitter_recovery.calculate' from '/home/junlim/projects/jitter_recovery/algo/jitter_recovery/calculate.py'>"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import algo.jitter_recovery.calculate\n",
-    "importlib.reload(algo.jitter_recovery.calculate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "44588351-2834-4217-a94d-2e6e2959f182",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-03T21:35:13.488010Z",
-     "iopub.status.busy": "2024-02-03T21:35:13.487684Z",
-     "iopub.status.idle": "2024-02-03T21:35:20.183543Z",
-     "shell.execute_reply": "2024-02-03T21:35:20.182664Z",
-     "shell.execute_reply.started": "2024-02-03T21:35:13.487978Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 symbol: PROMUSDT\n",
-      "1 symbol: DCRUSDT\n",
-      "2 symbol: ARKUSDT\n",
-      "3 symbol: RAREUSDT\n",
-      "4 symbol: OMUSDT\n",
-      "5 symbol: MULTIUSDT\n",
-      "6 symbol: POLSUSDT\n"
-     ]
-    }
-   ],
-   "source": [
-    "dfst_trading = algo.jitter_recovery.research.get_dfst_trading(df, symbol_with_jumps, jitter_recovery_trading_param)"
+    "dfst_feature, dfst_trading = algo.jitter_recovery.research.get_dfsts(df, jitter_recovery_trading_param)"
    ]
   },
   {
