--- a/sandbox_jitter_recovery_trading_okx.ipynb
+++ b/sandbox_jitter_recovery_trading_okx.ipynb
@@ -502,110 +502,7 @@
     }
    ],
    "source": [
-    "dfst_feature = algo.jitter_recovery.research.get_dfst_feature(df, jitter_recovery_trading_param)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "f2c517e3-6acf-48c9-9bfa-70abd2676470",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-02T01:47:29.591611Z",
-     "iopub.status.busy": "2024-02-02T01:47:29.591262Z",
-     "iopub.status.idle": "2024-02-02T01:47:29.976164Z",
-     "shell.execute_reply": "2024-02-02T01:47:29.974861Z",
-     "shell.execute_reply.started": "2024-02-02T01:47:29.591582Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "symbol_with_jumps = [s for s in list(set(list(dfst_feature[dfst_feature.ch_max >= 0.18].index.get_level_values(0)))) if 'USDT' in s]\n",
-    "len(symbol_with_jumps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4345d36-fe66-4952-af69-81362cbda2b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "d98968b0-af32-4faa-b5cf-a491da123f74",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-02T01:47:29.983948Z",
-     "iopub.status.busy": "2024-02-02T01:47:29.983538Z",
-     "iopub.status.idle": "2024-02-02T01:47:30.000001Z",
-     "shell.execute_reply": "2024-02-02T01:47:29.999517Z",
-     "shell.execute_reply.started": "2024-02-02T01:47:29.983928Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'algo.jitter_recovery.calculate' from '/home/junlim/projects/jitter_recovery/algo/jitter_recovery/calculate.py'>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import algo.jitter_recovery.calculate\n",
-    "importlib.reload(algo.jitter_recovery.calculate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "44588351-2834-4217-a94d-2e6e2959f182",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-02T01:47:30.000969Z",
-     "iopub.status.busy": "2024-02-02T01:47:30.000742Z",
-     "iopub.status.idle": "2024-02-02T01:47:43.084497Z",
-     "shell.execute_reply": "2024-02-02T01:47:43.083799Z",
-     "shell.execute_reply.started": "2024-02-02T01:47:30.000948Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 symbol: YFII-USDT-SWAP\n",
-      "1 symbol: CEL-USDT-SWAP\n",
-      "2 symbol: SWEAT-USDT-SWAP\n",
-      "3 symbol: API3-USDT-SWAP\n",
-      "4 symbol: UMA-USDT-SWAP\n",
-      "5 symbol: NMR-USDT-SWAP\n",
-      "6 symbol: KLAY-USDT-SWAP\n",
-      "7 symbol: CFX-USDT-SWAP\n"
-     ]
-    }
-   ],
-   "source": [
-    "dfst_trading = algo.jitter_recovery.research.get_dfst_trading(df, symbol_with_jumps, jitter_recovery_trading_param)"
+    "dfst_feature, dfst_trading = algo.jitter_recovery.research.get_dfsts(df, jitter_recovery_trading_param)"
    ]
   },
   {
