--- a/sandbox_jitter_recovery_trading_longterm_binance.ipynb
+++ b/sandbox_jitter_recovery_trading_longterm_binance.ipynb
@@ -10,7 +10,8 @@
      "iopub.status.idle": "2023-12-12T21:48:55.282856Z",
      "shell.execute_reply": "2023-12-12T21:48:55.281886Z",
      "shell.execute_reply.started": "2023-12-12T21:48:55.276437Z"
-    }
+    },
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "## import & load"
@@ -22,11 +23,11 @@
    "id": "a115d0f3-c935-4c05-a33a-732933233c0a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-03T22:42:47.000306Z",
-     "iopub.status.busy": "2024-02-03T22:42:46.999467Z",
-     "iopub.status.idle": "2024-02-03T22:42:48.218400Z",
-     "shell.execute_reply": "2024-02-03T22:42:48.217810Z",
-     "shell.execute_reply.started": "2024-02-03T22:42:47.000245Z"
+     "iopub.execute_input": "2024-02-05T11:48:37.479607Z",
+     "iopub.status.busy": "2024-02-05T11:48:37.479149Z",
+     "iopub.status.idle": "2024-02-05T11:48:38.166982Z",
+     "shell.execute_reply": "2024-02-05T11:48:38.166144Z",
+     "shell.execute_reply.started": "2024-02-05T11:48:37.479567Z"
     }
    },
    "outputs": [],
@@ -44,6 +45,7 @@
     "\n",
     "\n",
     "import datetime, json, math\n",
+    "from collections import defaultdict\n",
     "from google.cloud import bigquery\n",
     "from numpy_ext import rolling_apply as rolling_apply_ext"
    ]
@@ -54,11 +56,11 @@
    "id": "da881dba-cd40-4bd5-ba15-3fa2691a5107",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-03T22:42:48.219577Z",
-     "iopub.status.busy": "2024-02-03T22:42:48.219290Z",
-     "iopub.status.idle": "2024-02-03T22:42:48.222752Z",
-     "shell.execute_reply": "2024-02-03T22:42:48.222262Z",
-     "shell.execute_reply.started": "2024-02-03T22:42:48.219559Z"
+     "iopub.execute_input": "2024-02-05T11:48:38.168031Z",
+     "iopub.status.busy": "2024-02-05T11:48:38.167775Z",
+     "iopub.status.idle": "2024-02-05T11:48:38.173772Z",
+     "shell.execute_reply": "2024-02-05T11:48:38.172829Z",
+     "shell.execute_reply.started": "2024-02-05T11:48:38.168017Z"
     }
    },
    "outputs": [],
@@ -75,11 +77,11 @@
    "id": "0781806b-5f96-42f9-acec-2b15f54f6b35",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-03T22:42:48.223623Z",
-     "iopub.status.busy": "2024-02-03T22:42:48.223388Z",
-     "iopub.status.idle": "2024-02-03T22:42:53.939707Z",
-     "shell.execute_reply": "2024-02-03T22:42:53.939235Z",
-     "shell.execute_reply.started": "2024-02-03T22:42:48.223601Z"
+     "iopub.execute_input": "2024-02-05T11:48:38.175135Z",
+     "iopub.status.busy": "2024-02-05T11:48:38.174897Z",
+     "iopub.status.idle": "2024-02-05T11:48:43.588385Z",
+     "shell.execute_reply": "2024-02-05T11:48:43.586763Z",
+     "shell.execute_reply.started": "2024-02-05T11:48:38.175114Z"
     }
    },
    "outputs": [
@@ -105,11 +107,11 @@
    "id": "6a2ffc80-5719-43fe-b7dd-ea2bc98199b2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-03T22:42:53.941601Z",
-     "iopub.status.busy": "2024-02-03T22:42:53.940923Z",
-     "iopub.status.idle": "2024-02-03T22:42:55.414649Z",
-     "shell.execute_reply": "2024-02-03T22:42:55.413988Z",
-     "shell.execute_reply.started": "2024-02-03T22:42:53.941564Z"
+     "iopub.execute_input": "2024-02-05T11:48:43.591345Z",
+     "iopub.status.busy": "2024-02-05T11:48:43.591043Z",
+     "iopub.status.idle": "2024-02-05T11:48:45.163401Z",
+     "shell.execute_reply": "2024-02-05T11:48:45.162545Z",
+     "shell.execute_reply.started": "2024-02-05T11:48:43.591325Z"
     }
    },
    "outputs": [],
@@ -126,11 +128,11 @@
    "id": "f1cd98bd-1939-44bf-ad3d-d96df1a4382e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-03T22:42:55.415356Z",
-     "iopub.status.busy": "2024-02-03T22:42:55.415230Z",
-     "iopub.status.idle": "2024-02-03T22:42:55.434172Z",
-     "shell.execute_reply": "2024-02-03T22:42:55.433474Z",
-     "shell.execute_reply.started": "2024-02-03T22:42:55.415344Z"
+     "iopub.execute_input": "2024-02-05T11:48:45.164253Z",
+     "iopub.status.busy": "2024-02-05T11:48:45.164081Z",
+     "iopub.status.idle": "2024-02-05T11:48:45.176192Z",
+     "shell.execute_reply": "2024-02-05T11:48:45.175407Z",
+     "shell.execute_reply.started": "2024-02-05T11:48:45.164240Z"
     }
    },
    "outputs": [
@@ -226,11 +228,11 @@
    "id": "2f63a12c-2f68-4b0f-abe0-e9eb20afd5b4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-03T22:42:55.434878Z",
-     "iopub.status.busy": "2024-02-03T22:42:55.434736Z",
-     "iopub.status.idle": "2024-02-03T22:42:55.439887Z",
-     "shell.execute_reply": "2024-02-03T22:42:55.439062Z",
-     "shell.execute_reply.started": "2024-02-03T22:42:55.434864Z"
+     "iopub.execute_input": "2024-02-05T11:48:45.176890Z",
+     "iopub.status.busy": "2024-02-05T11:48:45.176730Z",
+     "iopub.status.idle": "2024-02-05T11:48:45.198780Z",
+     "shell.execute_reply": "2024-02-05T11:48:45.197908Z",
+     "shell.execute_reply.started": "2024-02-05T11:48:45.176875Z"
     }
    },
    "outputs": [
@@ -260,7 +262,9 @@
   {
    "cell_type": "markdown",
    "id": "9bb84b8e-cb19-47dd-a19e-fc04b0721b1a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## multiple symbols"
    ]
@@ -902,15 +906,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 107,
    "id": "a68c1eee-4f97-436f-b97a-021fae71f053",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-03T22:46:30.897400Z",
-     "iopub.status.busy": "2024-02-03T22:46:30.896150Z",
-     "iopub.status.idle": "2024-02-03T22:46:30.914512Z",
-     "shell.execute_reply": "2024-02-03T22:46:30.913704Z",
-     "shell.execute_reply.started": "2024-02-03T22:46:30.897338Z"
+     "iopub.execute_input": "2024-02-05T12:24:07.380882Z",
+     "iopub.status.busy": "2024-02-05T12:24:07.379880Z",
+     "iopub.status.idle": "2024-02-05T12:24:07.389113Z",
+     "shell.execute_reply": "2024-02-05T12:24:07.388379Z",
+     "shell.execute_reply.started": "2024-02-05T12:24:07.380820Z"
     }
    },
    "outputs": [
@@ -920,7 +924,7 @@
        "<module 'algo.jitter_recovery.research' from '/home/junlim/projects/jitter_recovery/algo/jitter_recovery/research.py'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,15 +938,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 108,
    "id": "a84c39b2-3f19-4fb2-b008-75b6e0d23473",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-03T22:46:33.831668Z",
-     "iopub.status.busy": "2024-02-03T22:46:33.830647Z",
-     "iopub.status.idle": "2024-02-03T22:46:33.842160Z",
-     "shell.execute_reply": "2024-02-03T22:46:33.839358Z",
-     "shell.execute_reply.started": "2024-02-03T22:46:33.831596Z"
+     "iopub.execute_input": "2024-02-05T12:24:07.740000Z",
+     "iopub.status.busy": "2024-02-05T12:24:07.739718Z",
+     "iopub.status.idle": "2024-02-05T12:24:07.743962Z",
+     "shell.execute_reply": "2024-02-05T12:24:07.743273Z",
+     "shell.execute_reply.started": "2024-02-05T12:24:07.739978Z"
     }
    },
    "outputs": [],
@@ -955,15 +959,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 109,
    "id": "ba11327e-923d-4c44-89a9-39a2bf3f5d1d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-02-03T22:46:36.214785Z",
-     "iopub.status.busy": "2024-02-03T22:46:36.213675Z",
-     "iopub.status.idle": "2024-02-03T22:46:40.265583Z",
-     "shell.execute_reply": "2024-02-03T22:46:40.264842Z",
-     "shell.execute_reply.started": "2024-02-03T22:46:36.214745Z"
+     "iopub.execute_input": "2024-02-05T12:24:08.215385Z",
+     "iopub.status.busy": "2024-02-05T12:24:08.213575Z",
+     "iopub.status.idle": "2024-02-05T12:24:10.949077Z",
+     "shell.execute_reply": "2024-02-05T12:24:10.948145Z",
+     "shell.execute_reply.started": "2024-02-05T12:24:08.215336Z"
     }
    },
    "outputs": [
