--- a/sandbox_jitter_following_trading_okx.ipynb
+++ b/sandbox_jitter_following_trading_okx.ipynb
@@ -19,9 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "id": "a115d0f3-c935-4c05-a33a-732933233c0a",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-17T02:48:30.644816Z",
+     "iopub.status.busy": "2024-05-17T02:48:30.644607Z",
+     "iopub.status.idle": "2024-05-17T02:48:31.629960Z",
+     "shell.execute_reply": "2024-05-17T02:48:31.629296Z",
+     "shell.execute_reply.started": "2024-05-17T02:48:30.644800Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -44,9 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "id": "623cf60e-e7a0-4f98-9d98-8c4fa79fa725",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-17T02:48:31.631220Z",
+     "iopub.status.busy": "2024-05-17T02:48:31.630935Z",
+     "iopub.status.idle": "2024-05-17T02:48:31.634409Z",
+     "shell.execute_reply": "2024-05-17T02:48:31.633873Z",
+     "shell.execute_reply.started": "2024-05-17T02:48:31.631204Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -64,9 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "id": "da881dba-cd40-4bd5-ba15-3fa2691a5107",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-17T02:48:31.635236Z",
+     "iopub.status.busy": "2024-05-17T02:48:31.635051Z",
+     "iopub.status.idle": "2024-05-17T02:48:31.645167Z",
+     "shell.execute_reply": "2024-05-17T02:48:31.644308Z",
+     "shell.execute_reply.started": "2024-05-17T02:48:31.635215Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -92,19 +113,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "id": "36a4a892-548f-4c93-a441-423043b5e8ab",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-17T02:48:34.603402Z",
+     "iopub.status.busy": "2024-05-17T02:48:34.603164Z",
+     "iopub.status.idle": "2024-05-17T02:48:34.642356Z",
+     "shell.execute_reply": "2024-05-17T02:48:34.641948Z",
+     "shell.execute_reply.started": "2024-05-17T02:48:34.603385Z"
+    },
     "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'market_data.ingest.bq.cache' from '/Users/junlim/projects/jitter_recovery/market_data/ingest/bq/cache.py'>"
+       "<module 'market_data.ingest.bq.cache' from '/home/junlim/projects/jitter_recovery/market_data/ingest/bq/cache.py'>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,9 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "id": "89404ac0-354b-481e-8bd1-a33db46f38d9",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-17T02:48:34.769892Z",
+     "iopub.status.busy": "2024-05-17T02:48:34.769560Z",
+     "iopub.status.idle": "2024-05-17T02:48:34.773260Z",
+     "shell.execute_reply": "2024-05-17T02:48:34.772714Z",
+     "shell.execute_reply.started": "2024-05-17T02:48:34.769870Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -181,19 +216,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "id": "7e4ad85d-1c7a-4dcf-b468-da209eb874d2",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-17T02:48:36.823479Z",
+     "iopub.status.busy": "2024-05-17T02:48:36.823134Z",
+     "iopub.status.idle": "2024-05-17T02:48:37.198685Z",
+     "shell.execute_reply": "2024-05-17T02:48:37.198135Z",
+     "shell.execute_reply.started": "2024-05-17T02:48:36.823455Z"
+    },
     "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'algo.cache' from '/Users/junlim/projects/jitter_recovery/algo/cache.py'>"
+       "<module 'algo.cache' from '/home/junlim/projects/jitter_recovery/algo/cache.py'>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,9 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "id": "dde2af94-4fca-46e0-bbf4-ad2201155953",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-17T02:48:37.199906Z",
+     "iopub.status.busy": "2024-05-17T02:48:37.199560Z",
+     "iopub.status.idle": "2024-05-17T02:48:37.202484Z",
+     "shell.execute_reply": "2024-05-17T02:48:37.201920Z",
+     "shell.execute_reply.started": "2024-05-17T02:48:37.199887Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -221,9 +270,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "id": "a7d2d4bd-60e6-411f-853b-f1e26b4df75b",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-17T02:48:37.268594Z",
+     "iopub.status.busy": "2024-05-17T02:48:37.268349Z",
+     "iopub.status.idle": "2024-05-17T02:48:37.272973Z",
+     "shell.execute_reply": "2024-05-17T02:48:37.272364Z",
+     "shell.execute_reply.started": "2024-05-17T02:48:37.268577Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -233,7 +289,7 @@
        "'feature/(changes)_window(30)'"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,297 +300,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "id": "b078c545-364b-4759-9aaa-d9c39d1889ab",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-17T02:49:02.624232Z",
+     "iopub.status.busy": "2024-05-17T02:49:02.623947Z",
+     "iopub.status.idle": "2024-05-17T02:49:02.969111Z",
+     "shell.execute_reply": "2024-05-17T02:49:02.968310Z",
+     "shell.execute_reply.started": "2024-05-17T02:49:02.624214Z"
+    },
     "tags": []
    },
    "outputs": [],
    "source": [
     "dfst_feature = algo.cache.read_df(\n",
-    "    label = algo.jitter_common.research.get_feature_label_for_caching(feature_param),\n",
+    "    label = algo.feature.jitter.research.get_feature_label_for_caching(feature_param),\n",
     "    dataset_mode = market_data.ingest.bq.common.DATASET_MODE.OKX,\n",
     "    export_mode = market_data.ingest.bq.common.EXPORT_MODE.BY_MINUTE,\n",
     "    date_str_from='2024-03-01', \n",
-    "    date_str_to='2024-03-14')"
+    "    date_str_to='2024-03-03')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c3b9b3d7-a59e-4b7a-82ce-22db707f6511",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "42e4bdfc-a1b4-44d6-88a5-45ad251c158b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>ch</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>symbol</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>ALGO-USDT-SWAP</th>\n",
-       "      <th>2024-03-01 00:00:00-05:00</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>METIS-USDT-SWAP</th>\n",
-       "      <th>2024-03-01 00:00:00-05:00</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DOGE-USDT-SWAP</th>\n",
-       "      <th>2024-03-01 00:00:00-05:00</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AR-USDT-SWAP</th>\n",
-       "      <th>2024-03-01 00:00:00-05:00</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OMG-USDT-SWAP</th>\n",
-       "      <th>2024-03-01 00:00:00-05:00</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FLOKI-USDT-SWAP</th>\n",
-       "      <th>2024-03-13 23:59:00-04:00</th>\n",
-       "      <td>-0.020853</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BLUR-USDT-SWAP</th>\n",
-       "      <th>2024-03-13 23:59:00-04:00</th>\n",
-       "      <td>-0.000875</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VELO-USDT-SWAP</th>\n",
-       "      <th>2024-03-13 23:59:00-04:00</th>\n",
-       "      <td>0.003276</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PYTH-USDT-SWAP</th>\n",
-       "      <th>2024-03-13 23:59:00-04:00</th>\n",
-       "      <td>0.005615</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ETH-USDC-SWAP</th>\n",
-       "      <th>2024-03-13 23:59:00-04:00</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3742873 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 ch\n",
-       "symbol          timestamp                          \n",
-       "ALGO-USDT-SWAP  2024-03-01 00:00:00-05:00  0.000000\n",
-       "METIS-USDT-SWAP 2024-03-01 00:00:00-05:00  0.000000\n",
-       "DOGE-USDT-SWAP  2024-03-01 00:00:00-05:00  0.000000\n",
-       "AR-USDT-SWAP    2024-03-01 00:00:00-05:00  0.000000\n",
-       "OMG-USDT-SWAP   2024-03-01 00:00:00-05:00  0.000000\n",
-       "...                                             ...\n",
-       "FLOKI-USDT-SWAP 2024-03-13 23:59:00-04:00 -0.020853\n",
-       "BLUR-USDT-SWAP  2024-03-13 23:59:00-04:00 -0.000875\n",
-       "VELO-USDT-SWAP  2024-03-13 23:59:00-04:00  0.003276\n",
-       "PYTH-USDT-SWAP  2024-03-13 23:59:00-04:00  0.005615\n",
-       "ETH-USDC-SWAP   2024-03-13 23:59:00-04:00       NaN\n",
-       "\n",
-       "[3742873 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfst_feature[['ch']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "id": "ec95f583-2269-4d07-8443-eacce8a0855a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>ch_rank</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>symbol</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>ALGO-USDT-SWAP</th>\n",
-       "      <th>2024-03-01 00:00:00-05:00</th>\n",
-       "      <td>86.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>METIS-USDT-SWAP</th>\n",
-       "      <th>2024-03-01 00:00:00-05:00</th>\n",
-       "      <td>86.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DOGE-USDT-SWAP</th>\n",
-       "      <th>2024-03-01 00:00:00-05:00</th>\n",
-       "      <td>86.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AR-USDT-SWAP</th>\n",
-       "      <th>2024-03-01 00:00:00-05:00</th>\n",
-       "      <td>86.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OMG-USDT-SWAP</th>\n",
-       "      <th>2024-03-01 00:00:00-05:00</th>\n",
-       "      <td>86.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FLOKI-USDT-SWAP</th>\n",
-       "      <th>2024-03-13 23:59:00-04:00</th>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BLUR-USDT-SWAP</th>\n",
-       "      <th>2024-03-13 23:59:00-04:00</th>\n",
-       "      <td>60.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VELO-USDT-SWAP</th>\n",
-       "      <th>2024-03-13 23:59:00-04:00</th>\n",
-       "      <td>126.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PYTH-USDT-SWAP</th>\n",
-       "      <th>2024-03-13 23:59:00-04:00</th>\n",
-       "      <td>146.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ETH-USDC-SWAP</th>\n",
-       "      <th>2024-03-13 23:59:00-04:00</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3742873 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           ch_rank\n",
-       "symbol          timestamp                         \n",
-       "ALGO-USDT-SWAP  2024-03-01 00:00:00-05:00     86.0\n",
-       "METIS-USDT-SWAP 2024-03-01 00:00:00-05:00     86.0\n",
-       "DOGE-USDT-SWAP  2024-03-01 00:00:00-05:00     86.0\n",
-       "AR-USDT-SWAP    2024-03-01 00:00:00-05:00     86.0\n",
-       "OMG-USDT-SWAP   2024-03-01 00:00:00-05:00     86.0\n",
-       "...                                            ...\n",
-       "FLOKI-USDT-SWAP 2024-03-13 23:59:00-04:00      4.0\n",
-       "BLUR-USDT-SWAP  2024-03-13 23:59:00-04:00     60.0\n",
-       "VELO-USDT-SWAP  2024-03-13 23:59:00-04:00    126.0\n",
-       "PYTH-USDT-SWAP  2024-03-13 23:59:00-04:00    146.0\n",
-       "ETH-USDC-SWAP   2024-03-13 23:59:00-04:00      NaN\n",
-       "\n",
-       "[3742873 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfst_feature.groupby('timestamp')[['ch']].rank('average').rename(columns={'ch': 'ch_rank'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9348c5a6-5627-4b96-9021-83d0c35861ac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e1d5a52-2358-4793-a07d-4c59787b858f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb000a89-1735-42c8-8140-712412d8d336",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1651,7 +1442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
