--- a/sandbox_momentum_reversal_gemini.ipynb
+++ b/sandbox_momentum_reversal_gemini.ipynb
@@ -3703,6 +3703,502 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4cb70fd9-9457-46c7-ad33-d218374da44e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "e5298ffd-369c-4239-b267-5a8b48a101ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>value</th>\n",
+       "      <th>ema</th>\n",
+       "      <th>ch</th>\n",
+       "      <th>ch_ema</th>\n",
+       "      <th>momentum</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>rank_descending</th>\n",
+       "      <th>in_position</th>\n",
+       "      <th>value_at_enter</th>\n",
+       "      <th>ch_from_enter</th>\n",
+       "      <th>position_changed</th>\n",
+       "      <th>profit_raw</th>\n",
+       "      <th>profit</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>timestamp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2024-05-03 23:55:00-04:00</th>\n",
+       "      <td>1416955.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.022911</td>\n",
+       "      <td>-0.045019</td>\n",
+       "      <td>-0.044993</td>\n",
+       "      <td>-0.044993</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-03 23:56:00-04:00</th>\n",
+       "      <td>1416956.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.022911</td>\n",
+       "      <td>-0.045019</td>\n",
+       "      <td>-0.044995</td>\n",
+       "      <td>-0.044995</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-03 23:57:00-04:00</th>\n",
+       "      <td>1416957.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.022911</td>\n",
+       "      <td>-0.045019</td>\n",
+       "      <td>-0.044996</td>\n",
+       "      <td>-0.044996</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-03 23:58:00-04:00</th>\n",
+       "      <td>1416958.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.022911</td>\n",
+       "      <td>-0.045019</td>\n",
+       "      <td>-0.044998</td>\n",
+       "      <td>-0.044998</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-03 23:59:00-04:00</th>\n",
+       "      <td>1416959.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.022910</td>\n",
+       "      <td>-0.045019</td>\n",
+       "      <td>-0.044999</td>\n",
+       "      <td>-0.044999</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               index     open     high      low    close  \\\n",
+       "timestamp                                                                  \n",
+       "2024-05-03 23:55:00-04:00  1416955.0  0.02291  0.02291  0.02291  0.02291   \n",
+       "2024-05-03 23:56:00-04:00  1416956.0  0.02291  0.02291  0.02291  0.02291   \n",
+       "2024-05-03 23:57:00-04:00  1416957.0  0.02291  0.02291  0.02291  0.02291   \n",
+       "2024-05-03 23:58:00-04:00  1416958.0  0.02291  0.02291  0.02291  0.02291   \n",
+       "2024-05-03 23:59:00-04:00  1416959.0  0.02291  0.02291  0.02291  0.02291   \n",
+       "\n",
+       "                           volume    value       ema        ch    ch_ema  \\\n",
+       "timestamp                                                                  \n",
+       "2024-05-03 23:55:00-04:00     0.0  0.02291  0.022911 -0.045019 -0.044993   \n",
+       "2024-05-03 23:56:00-04:00     0.0  0.02291  0.022911 -0.045019 -0.044995   \n",
+       "2024-05-03 23:57:00-04:00     0.0  0.02291  0.022911 -0.045019 -0.044996   \n",
+       "2024-05-03 23:58:00-04:00     0.0  0.02291  0.022911 -0.045019 -0.044998   \n",
+       "2024-05-03 23:59:00-04:00     0.0  0.02291  0.022910 -0.045019 -0.044999   \n",
+       "\n",
+       "                           momentum  rank  rank_descending  in_position  \\\n",
+       "timestamp                                                                 \n",
+       "2024-05-03 23:55:00-04:00 -0.044993   1.0             62.0            1   \n",
+       "2024-05-03 23:56:00-04:00 -0.044995   1.0             62.0            1   \n",
+       "2024-05-03 23:57:00-04:00 -0.044996   1.0             62.0            1   \n",
+       "2024-05-03 23:58:00-04:00 -0.044998   1.0             62.0            1   \n",
+       "2024-05-03 23:59:00-04:00 -0.044999   1.0             62.0            1   \n",
+       "\n",
+       "                           value_at_enter  ch_from_enter  position_changed  \\\n",
+       "timestamp                                                                    \n",
+       "2024-05-03 23:55:00-04:00         0.02291            0.0               0.0   \n",
+       "2024-05-03 23:56:00-04:00         0.02291            0.0               0.0   \n",
+       "2024-05-03 23:57:00-04:00         0.02291            0.0               0.0   \n",
+       "2024-05-03 23:58:00-04:00         0.02291            0.0               0.0   \n",
+       "2024-05-03 23:59:00-04:00         0.02291            0.0               0.0   \n",
+       "\n",
+       "                           profit_raw  profit  \n",
+       "timestamp                                      \n",
+       "2024-05-03 23:55:00-04:00         0.0     0.0  \n",
+       "2024-05-03 23:56:00-04:00         0.0     0.0  \n",
+       "2024-05-03 23:57:00-04:00         0.0     0.0  \n",
+       "2024-05-03 23:58:00-04:00         0.0     0.0  \n",
+       "2024-05-03 23:59:00-04:00         0.0     0.0  "
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_trading.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb3ef425-0ebd-4d29-9c7c-46862f5eeb8f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "6a84b92e-8f89-47c4-bdde-dbae32de8f82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>value</th>\n",
+       "      <th>ema</th>\n",
+       "      <th>ch</th>\n",
+       "      <th>ch_ema</th>\n",
+       "      <th>momentum</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>rank_descending</th>\n",
+       "      <th>in_position</th>\n",
+       "      <th>value_at_enter</th>\n",
+       "      <th>ch_from_enter</th>\n",
+       "      <th>position_changed</th>\n",
+       "      <th>profit_raw</th>\n",
+       "      <th>profit</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>timestamp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2024-05-03 23:55:00-04:00</th>\n",
+       "      <td>1416954.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.022911</td>\n",
+       "      <td>-0.045019</td>\n",
+       "      <td>-0.044991</td>\n",
+       "      <td>-0.044991</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-03 23:56:00-04:00</th>\n",
+       "      <td>1416955.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.022911</td>\n",
+       "      <td>-0.045019</td>\n",
+       "      <td>-0.044993</td>\n",
+       "      <td>-0.044993</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-03 23:57:00-04:00</th>\n",
+       "      <td>1416956.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.022911</td>\n",
+       "      <td>-0.045019</td>\n",
+       "      <td>-0.044995</td>\n",
+       "      <td>-0.044995</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-03 23:58:00-04:00</th>\n",
+       "      <td>1416957.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.022911</td>\n",
+       "      <td>-0.045019</td>\n",
+       "      <td>-0.044996</td>\n",
+       "      <td>-0.044996</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-05-03 23:59:00-04:00</th>\n",
+       "      <td>1416958.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.022911</td>\n",
+       "      <td>-0.045019</td>\n",
+       "      <td>-0.044998</td>\n",
+       "      <td>-0.044998</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.02291</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               index     open     high      low    close  \\\n",
+       "timestamp                                                                  \n",
+       "2024-05-03 23:55:00-04:00  1416954.0  0.02291  0.02291  0.02291  0.02291   \n",
+       "2024-05-03 23:56:00-04:00  1416955.0  0.02291  0.02291  0.02291  0.02291   \n",
+       "2024-05-03 23:57:00-04:00  1416956.0  0.02291  0.02291  0.02291  0.02291   \n",
+       "2024-05-03 23:58:00-04:00  1416957.0  0.02291  0.02291  0.02291  0.02291   \n",
+       "2024-05-03 23:59:00-04:00  1416958.0  0.02291  0.02291  0.02291  0.02291   \n",
+       "\n",
+       "                           volume    value       ema        ch    ch_ema  \\\n",
+       "timestamp                                                                  \n",
+       "2024-05-03 23:55:00-04:00     0.0  0.02291  0.022911 -0.045019 -0.044991   \n",
+       "2024-05-03 23:56:00-04:00     0.0  0.02291  0.022911 -0.045019 -0.044993   \n",
+       "2024-05-03 23:57:00-04:00     0.0  0.02291  0.022911 -0.045019 -0.044995   \n",
+       "2024-05-03 23:58:00-04:00     0.0  0.02291  0.022911 -0.045019 -0.044996   \n",
+       "2024-05-03 23:59:00-04:00     0.0  0.02291  0.022911 -0.045019 -0.044998   \n",
+       "\n",
+       "                           momentum  rank  rank_descending  in_position  \\\n",
+       "timestamp                                                                 \n",
+       "2024-05-03 23:55:00-04:00 -0.044991   1.0             62.0          1.0   \n",
+       "2024-05-03 23:56:00-04:00 -0.044993   1.0             62.0          1.0   \n",
+       "2024-05-03 23:57:00-04:00 -0.044995   1.0             62.0          1.0   \n",
+       "2024-05-03 23:58:00-04:00 -0.044996   1.0             62.0          1.0   \n",
+       "2024-05-03 23:59:00-04:00 -0.044998   1.0             62.0          1.0   \n",
+       "\n",
+       "                           value_at_enter  ch_from_enter  position_changed  \\\n",
+       "timestamp                                                                    \n",
+       "2024-05-03 23:55:00-04:00         0.02291            0.0               0.0   \n",
+       "2024-05-03 23:56:00-04:00         0.02291            0.0               0.0   \n",
+       "2024-05-03 23:57:00-04:00         0.02291            0.0               0.0   \n",
+       "2024-05-03 23:58:00-04:00         0.02291            0.0               0.0   \n",
+       "2024-05-03 23:59:00-04:00         0.02291            0.0               0.0   \n",
+       "\n",
+       "                           profit_raw  profit  \n",
+       "timestamp                                      \n",
+       "2024-05-03 23:55:00-04:00         0.0     0.0  \n",
+       "2024-05-03 23:56:00-04:00         0.0     0.0  \n",
+       "2024-05-03 23:57:00-04:00         0.0     0.0  \n",
+       "2024-05-03 23:58:00-04:00         0.0     0.0  \n",
+       "2024-05-03 23:59:00-04:00         0.0     0.0  "
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_trading.shift().tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ca9c667-acfb-430a-a4e5-7f33a58b6e11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3601056d-2f50-4775-bff5-eada1d129caf",
    "metadata": {},
    "outputs": [],
@@ -3763,7 +4259,7 @@
    "id": "09ccb998-3915-4821-bd82-be38bb0e703e",
    "metadata": {},
    "source": [
-    "note that the volume is very miniscule and what the algo captures is not really feasible for trading."
+    "note that the volume is very miniscule and what the algo captures is the "
    ]
   },
   {
