--- a/sandbox_jitter_recovery_trading_okx_collective.ipynb
+++ b/sandbox_jitter_recovery_trading_okx_collective.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7e4ad85d-1c7a-4dcf-b468-da209eb874d2",
    "metadata": {
     "tags": []
@@ -192,7 +192,7 @@
        "<module 'algo.cache' from '/Users/junlim/projects/jitter_recovery/algo/cache.py'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "3fbae5b6-1567-4b0e-91a4-a5002b290829",
    "metadata": {
     "tags": []
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "0caf15be-6d5b-4a8c-a247-58e0d687298f",
    "metadata": {
     "tags": []
@@ -238,7 +238,7 @@
        "'feature/(collectivechanges)_window(40)_collective_window(30)'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "68fbc0de-0cbe-4eca-b298-2e957ea4a96e",
    "metadata": {
     "tags": []
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "d3f89ca3-f5f9-41fb-8dde-e2ddfd80a3c7",
    "metadata": {
     "tags": []
@@ -844,7 +844,7 @@
        "<module 'algo.cache' from '/Users/junlim/projects/jitter_recovery/algo/cache.py'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "0487be51-fc93-4e2f-beb6-d5fa4bb1124e",
    "metadata": {
     "scrolled": true,
@@ -894,7 +894,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
+   "id": "c02a1cea-ce42-4e50-accb-f130040ff463",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mInit signature:\u001b[0m\n",
+       "\u001b[0malgo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcollective_jitter_recovery\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalculate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCollectiveDropRecoveryTradingParam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mcollective_drop_threshold\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mcollective_drop_lower_threshold\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mdrop_threshold\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mjump_from_drop_threshold\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mexit_drop_threshold\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m      <no docstring>\n",
+       "\u001b[0;31mFile:\u001b[0m           ~/projects/jitter_recovery/algo/alpha/collective_jitter_recovery/calculate.py\n",
+       "\u001b[0;31mType:\u001b[0m           type\n",
+       "\u001b[0;31mSubclasses:\u001b[0m     \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "algo.alpha.collective_jitter_recovery.calculate.CollectiveDropRecoveryTradingParam?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "63c4e0c6-de00-451b-b42f-ea7ce07a8e83",
    "metadata": {
     "tags": []
@@ -904,7 +935,11 @@
     "trading_param = algo.alpha.collective_jitter_recovery.calculate.CollectiveRecoveryTradingParam(\n",
     "    feature_param, \n",
     "    collective_drop_recovery_trading_param = algo.alpha.collective_jitter_recovery.calculate.CollectiveDropRecoveryTradingParam(\n",
-    "        -0.03, -0.30, -0.03, +0.005, -0.01),\n",
+    "        collective_drop_threshold=-0.03, \n",
+    "        collective_drop_lower_threshold=-0.30, \n",
+    "        drop_threshold=-0.03, \n",
+    "        jump_from_drop_threshold=+0.005, \n",
+    "        =exit_drop_threshold-0.01),\n",
     "    collective_jump_recovery_trading_param = None,\n",
     ")"
    ]
@@ -1022,7 +1057,7 @@
     {
      "data": {
       "text/plain": [
-       "'trading/(collectivechanges_trading)_feature_param(window(40)_collective_window(30))_collective_drop_recovery_trading_param(collective_drop_threshold(-0.1)_collective_drop_lower_threshold(-0.3)_drop_threshold(-0.15)_jump_from_drop_threshold(0.04)/exit_drop_threshold(-0.02))_collective_jump_recovery_trading_param(None)'"
+       "'trading/(collectivechanges_trading)_feature_param(window(40)_collective_window(30))_collective_drop_recovery_trading_param(collective_drop_threshold(-0.03)_collective_drop_lower_threshold(-0.3)_drop_threshold(-0.03)_jump_from_drop_threshold(0.005)/exit_drop_threshold(-0.01))_collective_jump_recovery_trading_param(None)'"
       ]
      },
      "execution_count": 15,
@@ -1453,7 +1488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c077b7ba-64ad-498f-af70-e5366c6de190",
+   "id": "3330c4a4-15bb-45c9-bfcd-2b3728ee8720",
    "metadata": {},
    "outputs": [],
    "source": []
