--- a/sandbox_jitter_recovery_trading_okx_collective.ipynb
+++ b/sandbox_jitter_recovery_trading_okx_collective.ipynb
@@ -900,7 +900,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "36b76c6c-6281-48d9-94ab-a870fb2331de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19940ad6-31d7-4958-bc78-5a59aef06896",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfst_trading = algo.cache.read_df(\n",
+    "    label = algo.alpha.collective_jitter_recovery.research.get_trading_label_for_caching(trading_param),\n",
+    "    dataset_mode = market_data.ingest.bq.common.DATASET_MODE.OKX,\n",
+    "    export_mode = market_data.ingest.bq.common.EXPORT_MODE.BY_MINUTE,\n",
+    "    date_str_from='2024-08-01', \n",
+    "    date_str_to='2024-10-14',\n",
+    "    columns=['profit', 'value', 'position_changed']\n",
+    ")\n",
+    "dfst_trading[['profit']].groupby('timestamp').sum().cumsum().plot(figsize=(8,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e6b411c6-de76-4fd6-b5d6-9020aa225faf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "747e4ebb-fd3a-4571-a12f-6fffd11c6c9a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59dc7a84-dfb9-4f30-803d-bf0176d2a4a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e54dc4bd-324b-4fbe-b688-b677afea0786",
    "metadata": {},
    "outputs": [],
    "source": []
