--- a/sandbox_jitter_recovery_trading_okx.ipynb
+++ b/sandbox_jitter_recovery_trading_okx.ipynb
@@ -227,7 +227,7 @@
    "cell_type": "markdown",
    "id": "9bb84b8e-cb19-47dd-a19e-fc04b0721b1a",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
+    "tags": []
    },
    "source": [
     "## calculate/cache feature"
@@ -803,7 +803,7 @@
      "shell.execute_reply": "2024-02-01T14:36:55.120954Z",
      "shell.execute_reply.started": "2024-02-01T14:36:55.118144Z"
     },
-    "jp-MarkdownHeadingCollapsed": true
+    "tags": []
    },
    "source": [
     "## single symbol"
@@ -1241,7 +1241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
